일부 파일 수정 및 리드미 수정